# ulsan-port-3d

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  mkdocs.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  deploy-pages.yml
apps/backend/: Dockerfile  alembic.ini  package.json  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 001_initial_schema.py
apps/backend/app/: main.py
apps/backend/app/core/: config.py  database.py  errors.py
apps/backend/app/models/: base.py  documents.py  static.py  timeseries.py
apps/backend/app/routers/: berths.py  docs.py  graph.py  insights.py  port.py  scenarios.py  stats.py  vessels.py  weather.py  websocket.py
apps/backend/app/schemas/: berth.py  common.py  docs.py  graph.py  port.py  scenarios.py  stats.py  vessel.py  weather.py
apps/backend/app/services/: alert_engine.py  berths.py  common.py  docs.py  graph.py  insight_rules.py  llm_summary.py  port.py  pubsub.py  rule_engine.py  scenario_generator.py  scenarios.py  seed.py  stats.py  vessels.py  weather.py
apps/backend/tests/: conftest.py  test_health.py  test_routers.py
apps/frontend/: Dockerfile  eslint.config.js  index.html  (+8 more)
docs/: about.md  api-spec.md  architecture-ko.md  index.md  ontology.md  prd.md  project-overview-ko.md
etl/: common.py  config.py  database.py  pyproject.toml  scheduler.py
etl/collectors/: berth_facility.py  berth_status.py  route_gis.py  statistics.py  tank_terminal.py  vessel_event.py  vessel_position.py  weather.py
etl/normalizers/: __init__.py  berth.py  common.py  vessel.py  weather.py
etl/tests/: test_collectors.py  test_common.py
(+30 files in other folders)
